--- a/teachers.html
+++ b/teachers.html
@@ -266,7 +266,7 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/d.anarbaev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>Dilshad Anarbaev</h3>
@@ -301,7 +301,7 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_6.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/a.kibekbaev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>Azamat Kibekbaev</h3>
@@ -318,7 +318,7 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_7.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/m.abdyjabbarov.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>Musa Abdujabbarov</h3>
@@ -338,7 +338,7 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/k.duisheev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>Kanybek Duisheev</h3>
@@ -355,11 +355,11 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/u.sadybakasov.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Janet Morris</h3>
-                  <p>English Teacher</p>
+                  <h3>Ulan Sadybakasov</h3>
+                  <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -373,11 +373,11 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_6.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/zh.zhakshylykov.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Linda Reyez</h3>
-                  <p>Math Teacher</p>
+                  <h3>Zhyldyzbek Zhakshylykov</h3>
+                  <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -390,11 +390,11 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_7.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/o.gurbuz.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Jessa Sy</h3>
-                  <p>Physics Teacher</p>
+                  <h3>Omer Gurbuz</h3>
+                  <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
